docs/api/qiskit-ibm-runtime/0.48/options-resilience-options-v2.mdx
---
title: ResilienceOptionsV2 (v0.48)
description: API reference for qiskit_ibm_runtime.options.ResilienceOptionsV2 in qiskit-ibm-runtime v0.48
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.options.ResilienceOptionsV2
---

# ResilienceOptionsV2

<Class id="qiskit_ibm_runtime.options.ResilienceOptionsV2" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.48/qiskit_ibm_runtime/options/resilience_options.py#L39-L134" signature="ResilienceOptionsV2(measure_mitigation=Unset, measure_noise_learning=<factory>, zne_mitigation=Unset, zne=<factory>, pec_mitigation=Unset, pec=<factory>, layer_noise_learning=<factory>, layer_noise_model=Unset)" modifiers="class">
  Bases: `object`

  Resilience options for V2 Estimator.

  ## Attributes

  **Parameters**

  *   **measure\_mitigation** (*UnsetType | bool*)
  *   **measure\_noise\_learning** ([*MeasureNoiseLearningOptions*](options-measure-noise-learning-options "qiskit_ibm_runtime.options.measure_noise_learning_options.MeasureNoiseLearningOptions") *| Dict*)
  *   **zne\_mitigation** (*UnsetType | bool*)
  *   **zne** ([*ZneOptions*](options-zne-options "qiskit_ibm_runtime.options.zne_options.ZneOptions") *| Dict*)
  *   **pec\_mitigation** (*UnsetType | bool*)
  *   **pec** ([*PecOptions*](options-pec-options "qiskit_ibm_runtime.options.pec_options.PecOptions") *| Dict*)
  *   **layer\_noise\_learning** ([*LayerNoiseLearningOptions*](options-layer-noise-learning-options "qiskit_ibm_runtime.options.layer_noise_learning_options.LayerNoiseLearningOptions") *| Dict*)
  *   **layer\_noise\_model** (*UnsetType |* [*NoiseLearnerResult*](results-noise-learner-result "qiskit_ibm_runtime.results.noise_learner.NoiseLearnerResult") *| Sequence\[*[*LayerError*](results-layer-error "qiskit_ibm_runtime.results.noise_learner.LayerError")*] | None*)

  ### layer\_noise\_learning

  <Attribute id="qiskit_ibm_runtime.options.ResilienceOptionsV2.layer_noise_learning" attributeTypeHint="LayerNoiseLearningOptions | Dict" attributeTypeHintHref="options-layer-noise-learning-options" attributeValue="FieldInfo(annotation=NoneType, required=False, default_factory=LayerNoiseLearningOptions)">
    Layer noise learning options.

    See [`LayerNoiseLearningOptions`](options-layer-noise-learning-options "qiskit_ibm_runtime.options.LayerNoiseLearningOptions") for all options.
  </Attribute>

  ### layer\_noise\_model

  <Attribute id="qiskit_ibm_runtime.options.ResilienceOptionsV2.layer_noise_model" attributeTypeHint="UnsetType | NoiseLearnerResult | Sequence[LayerError] | None" attributeTypeHintHref="results-noise-learner-result" attributeValue="Unset">
    A `NoiseLearnerResult` or a sequence of `LayerError` objects.

    If `None`, all the mitigation strategies that require noise data (e.g., PEC and PEA) perform a noise-learning stage. Otherwise, this noise-learning stage is skipped, and instead gather the required information from `layer_noise_model`. Layers whose information is missing in `layer_noise_model` are treated as noiseless and their noise is not mitigated.

    Default: `None`.
  </Attribute>

  ### measure\_mitigation

  <Attribute id="qiskit_ibm_runtime.options.ResilienceOptionsV2.measure_mitigation" attributeTypeHint="UnsetType | bool" attributeValue="Unset">
    Whether to enable measurement error mitigation method.

    If you enable measurement mitigation, you can fine-tune its noise learning by using [`measure_noise_learning`](#qiskit_ibm_runtime.options.ResilienceOptionsV2.measure_noise_learning "qiskit_ibm_runtime.options.ResilienceOptionsV2.measure_noise_learning"). See [`MeasureNoiseLearningOptions`](options-measure-noise-learning-options "qiskit_ibm_runtime.options.MeasureNoiseLearningOptions") for all measurement mitigation noise learning options.

    If `measure_mitigation` is `Unset`, it is determined by the server according to the resilience level: it is `False` for resilience level 0, and `True` for resilience levels 1 and 2.
  </Attribute>

  ### measure\_noise\_learning

  <Attribute id="qiskit_ibm_runtime.options.ResilienceOptionsV2.measure_noise_learning" attributeTypeHint="MeasureNoiseLearningOptions | Dict" attributeTypeHintHref="options-measure-noise-learning-options" attributeValue="FieldInfo(annotation=NoneType, required=False, default_factory=MeasureNoiseLearningOptions)">
    Additional measurement noise learning options.

    See [`MeasureNoiseLearningOptions`](options-measure-noise-learning-options "qiskit_ibm_runtime.options.MeasureNoiseLearningOptions") for all options.
  </Attribute>

  ### pec

  <Attribute id="qiskit_ibm_runtime.options.ResilienceOptionsV2.pec" attributeTypeHint="PecOptions | Dict" attributeTypeHintHref="options-pec-options" attributeValue="FieldInfo(annotation=NoneType, required=False, default_factory=PecOptions)">
    Additional probabalistic error cancellation mitigation options.

    See [`PecOptions`](options-pec-options "qiskit_ibm_runtime.options.PecOptions") for all options.
  </Attribute>

  ### pec\_mitigation

  <Attribute id="qiskit_ibm_runtime.options.ResilienceOptionsV2.pec_mitigation" attributeTypeHint="UnsetType | bool" attributeValue="Unset">
    Whether to turn on Probabilistic Error Cancellation error mitigation method.

    If you enable PEC, you can fine-tune its options by using [`pec`](#qiskit_ibm_runtime.options.ResilienceOptionsV2.pec "qiskit_ibm_runtime.options.ResilienceOptionsV2.pec"). See [`PecOptions`](options-pec-options "qiskit_ibm_runtime.options.PecOptions") for additional PEC-related options.

    Default: False.
  </Attribute>

  ### zne

  <Attribute id="qiskit_ibm_runtime.options.ResilienceOptionsV2.zne" attributeTypeHint="ZneOptions | Dict" attributeTypeHintHref="options-zne-options" attributeValue="FieldInfo(annotation=NoneType, required=False, default_factory=ZneOptions)">
    Additional zero-noise extrapolation mitigation options.

    See [`ZneOptions`](options-zne-options "qiskit_ibm_runtime.options.ZneOptions") for all options.
  </Attribute>

  ### zne\_mitigation

  <Attribute id="qiskit_ibm_runtime.options.ResilienceOptionsV2.zne_mitigation" attributeTypeHint="UnsetType | bool" attributeValue="Unset">
    Whether to turn on Zero-Noise Extrapolation error mitigation method.

    If you enable ZNE, you can fine-tune its options by using [`zne`](#qiskit_ibm_runtime.options.ResilienceOptionsV2.zne "qiskit_ibm_runtime.options.ResilienceOptionsV2.zne"). See [`ZneOptions`](options-zne-options "qiskit_ibm_runtime.options.ZneOptions") for additional ZNE related options.

    If `zne_mitigation` is `Unset`, it is determined by the server according to the resilience level: it is `False` for resilience levels 0 and 1, and `True` for resilience level 2.
  </Attribute>

  ## Methods
</Class>

